updated styling for modal, fixed color contrast issues for better lighthouse score

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap');
 
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
 * {
   --eggshell: #f4f1deff;
-  --burnt-sienna: rgb(224, 110, 79);
-  --delft-blue: rgb(61, 64, 91);
+  --burnt-sienna: rgb(165, 71, 46);
+  --delft-blue: rgb(49, 52, 74);
   --cambridge-blue: #81b29aff;
   --sunset: #f2cc8fff;
   font-family: 'Roboto', sans-serif;
@@ -88,12 +134,12 @@ button:hover {
 a {
   text-decoration: none;
   margin: 1rem;
+  color: var(--delft-blue);
 }
 
 nav {
   padding-inline: 1rem;
   padding-block: .5rem;
-
 }
 
 
@@ -115,7 +161,7 @@ nav {
 #tips-section div {
   min-height: 25vh;
   background-color: var(--burnt-sienna);
-  color: var(--eggshell);
+  color: white;
 }
 
 #level-status-section {
@@ -124,7 +170,7 @@ nav {
 }
 
 #modal {
-  /* display: none;  */
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -136,12 +182,41 @@ nav {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+#user-greeting {
+  display: none;
+}
+
+#user-greeting {
+  display: none;
+}
+
+#level-complete-btn {
+  display: none;
+}
+
+
 .modal-content {
-  background-color: #fefefe;
+  background-color: var(--delft-blue);
+  color: var(--sunset);
   margin: 15% auto;
   padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
+  border: 1px solid var(--cambridge-blue);
+  width: 40%;
+}
+
+/* The Modal Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .flex-between {
@@ -208,6 +283,23 @@ nav {
   color: var(--cambridge-blue);
 }
 
-.tip-ul {
+.btn-red {
+  border-color: var(--sunset);
+  color: var(--sunset);
+}
+
+.btn-red:hover {
+  background-color: var(--sunset);
+}
+
+.tip-div {
   display: none;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.shake {
+  animation: shake 0.5s;
 }
